<resources>
    <string name="app_name">LinxShare</string>
    <string name="server_settings">Server settings</string>
    <string name="default_upload_settings">Default upload settings</string>
    <string name="upload_settings">Upload settings</string>
    <string name="linx_url">Linx URL</string>
    <string name="api_key">API key</string>
    <string name="delete_key">Delete key</string>
    <string name="expiration">Expiration</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="randomize_filename">Randomize filename</string>
    <string name="filename">Filename</string>
    <string name="no_api_key_set">No API key is set</string>
    <string name="api_key_set">An API key is set</string>
    <string name="no_delete_key_set">No delete key is set</string>
    <string name="delete_key_set">A delete key is set</string>
</resources>
