<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/server_settings">
        <EditTextPreference
                app:defaultValue="https://"
                app:title="@string/linx_url"
                app:key="linx_url"/>
        <EditTextPreference
                app:title="@string/api_key"
                app:key="api_key"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/default_upload_settings">
        <EditTextPreference
                app:title="@string/delete_key"
                app:key="delete_key"/>
        <ListPreference
                app:defaultValue="0"
                app:title="@string/expiration"
                app:entries="@array/expiration"
                app:entryValues="@array/expirationValues"
                app:key="expiration"/>
        <SwitchPreferenceCompat
                app:defaultValue="true"
                app:title="@string/randomize_filename"
                app:key="randomize_filename"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>